Fixed flex alignment and switched order

--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ body, input, select, textarea {
 
 #banner .flex div:last-child {
 	border: none;
-	padding-right: 0;
+	padding-right: 180px;
 }
 
 #banner .flex div:first-child {
